...
"About" = "About";

/* No comment provided by engineer. */
"About put.io" = "About put.io";

/* No comment provided by engineer. */
"Account" = "Account";

/* No comment provided by engineer. */
"Amsterdam" = "Amsterdam";

/* No comment provided by engineer. */
"Ascending" = "Ascending";
...
"File not reachable" = "File not reachable";

/* No comment provided by engineer. */
"File Unavailable" = "File Unavailable";

/* No comment provided by engineer. */
"Files" = "Files";

/* No comment provided by engineer. */
"Folder Name" = "Folder Name";

/* Audio player controls. */
"Forward 15 seconds" = "Forward 15 seconds";
...
"There will be information when things start happening." = "There will be information when things start happening.";

/* No comment provided by engineer. */
"This directory doesn't contain any folder" = "This directory doesn't contain any folder";

/* No comment provided by engineer. */
"Today" = "Today";

/* No comment provided by engineer. */
"Trash" = "Trash";

/* No comment provided by engineer. */
"Two-factor authentication" = "Two-factor authentication";
...
"Where you are logged in" = "Where you are logged in";

/* No comment provided by engineer. */
"Yes, empty trash" = "Yes, empty trash";

/* No comment provided by engineer. */
"Yesterday" = "Yesterday";

/* No comment provided by engineer. */
"You have successfully linked to %@" = "You have successfully linked to %@";

/* No comment provided by engineer. */
"Your Files" = "Your Files";
...
